Move to NetStandard 2.1

--- a/ShoppingList2021.Core.WinDesktop/ShoppingList2021.Core.WinDesktop.csproj
+++ b/ShoppingList2021.Core.WinDesktop/ShoppingList2021.Core.WinDesktop.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <OutputType>Library</OutputType>
-    <RootNamespace>ShoppingList.Core.WInDesktop</RootNamespace>
-    <AssemblyName>ShoppingList.Core.WInDesktop</AssemblyName>
+    <RootNamespace>ShoppingList.Core.WinDesktop</RootNamespace>
+    <AssemblyName>ShoppingList.Core.WinDesktop</AssemblyName>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
   <ItemGroup>
