Add Local Database projects

--- a/ShoppingList2021.Core.iOS/ShoppingList2021.Core.iOS.csproj
+++ b/ShoppingList2021.Core.iOS/ShoppingList2021.Core.iOS.csproj
@@ -46,5 +46,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PlatformSpecialFolder.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers">
+      <Version>5.0.3</Version>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
