--- a/ShoppingList2021/ShoppingList2021.csproj
+++ b/ShoppingList2021/ShoppingList2021.csproj
@@ -5,10 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AsyncAwaitBestPractices.MVVM" Version="6.0.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="5.0.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Prism.DryIoc.Extensions" Version="8.0.62" />
+    <PackageReference Include="Prism.Forms.Extended" Version="8.0.62" />
+    <PackageReference Include="PropertyChanged.Fody" Version="3.4.0" PrivateAssets="All" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
     <PackageReference Include="Xamarin.Essentials.Interfaces" Version="1.7.0" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2083" />
@@ -16,7 +20,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ShoppingList2021.Core.Types\ShoppingList2021.Core.Types.csproj" />
     <ProjectReference Include="..\ShoppingList2021.Database.Types\ShoppingList2021.Database.Types.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Views\ShoppingItemsPage.xaml.cs">
+      <DependentUpon>ShoppingItemsPage.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
 
 </Project>
