--- a/ShoppingList2021.Android/Properties/AndroidManifest.xml
+++ b/ShoppingList2021.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.appname" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="22" android:targetSdkVersion="29" />
-	<application android:label="@string/app_name" android:icon="@mipmap/icon"></application>
+    <application android:label="ShoppingList2021.Android" android:theme="@style/MainTheme">
+        <provider android:name="androidx.core.content.FileProvider"
+				android:authorities="${applicationId}.fileprovider"
+				android:exported="false"
+				android:grantUriPermissions="true">
+            <meta-data android:name="android.support.FILE_PROVIDER_PATHS"
+				android:resource="@xml/file_paths"></meta-data>
+        </provider>
+    </application>
 </manifest>
