--- a/ShoppingList2021.iOS/Info.plist
+++ b/ShoppingList2021.iOS/Info.plist
@@ -36,5 +36,11 @@
     <string>1.0</string>
     <key>CFBundleShortVersionString</key>
     <string>1</string>
-  </dict>
+    <key>NSCameraUsageDescription</key>
+    <string>This app needs access to the camera to take photos.</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>This app needs access to photos.</string>
+    <key>NSPhotoLibraryAddUsageDescription</key>
+    <string>This app needs access to the photo gallery.</string>
+    </dict>
 </plist>
