--- a/ShoppingList2021.iOS/ShoppingList2021.iOS.csproj
+++ b/ShoppingList2021.iOS/ShoppingList2021.iOS.csproj
@@ -210,6 +210,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Xam.Plugin.Media">
+      <Version>5.0.1</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Essentials">
       <Version>1.7.0</Version>
     </PackageReference>
