--- a/ShoppingList2021.iOS/Info.plist
+++ b/ShoppingList2021.iOS/Info.plist
@@ -42,5 +42,11 @@
     <string>This app needs access to photos.</string>
     <key>NSPhotoLibraryAddUsageDescription</key>
     <string>This app needs access to the photo gallery.</string>
+	<key>CFBundleLocalizations</key>
+	<array>
+		<string>de</string>
+	</array>
+	<key>CFBundleDevelopmentRegion</key>
+	<string>German</string>
     </dict>
 </plist>
