Implement saving database changes asynchronously

--- a/ShoppingList2021.Database.Types/ShoppingList2021.Database.Types.csproj
+++ b/ShoppingList2021.Database.Types/ShoppingList2021.Database.Types.csproj
@@ -9,6 +9,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Prism.Core" Version="8.1.97" />
   </ItemGroup>
 
 </Project>
